log/build_2023-09-18_22-59-42/my_bleak/stderr.log
  File "/home/ngocdai/lidar_ws/install/my_bleak/lib/python3.10/site-packages/my_bleak/bleak_client.py", line 25
    imu_msg.header.stamp = self.get_clock()_now()
                                           ^^^^
SyntaxError: invalid syntax

